deprecated/tanzu-application-platform/yaml/redis.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: cart-redis
  namespace: #@ data.values.workloadNamespace
  labels:
    app: acmefit
    service: cart-redis
spec:
  ports:
    - port: 6379
      name: redis-cart
  selector:
    app: acmefit
    service: cart-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-redis
  namespace: #@ data.values.workloadNamespace
  labels:
    app: acmefit
    service: cart-redis
    version: 1.0.0
spec:
  selector:
    matchLabels:
      app: acmefit  
      service: cart-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit  
        service: cart-redis
    spec:
      containers:
        - name: cart-redis
          image: bitnami/redis
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
          ports:
            - name: redis
              containerPort: 6379
              protocol: "TCP"
          volumeMounts:
            - mountPath: /var/lib/redis
              name: cart-redis-data

      volumes:
        - name: cart-redis-data
          emptyDir: {}
