deprecated/tanzu-application-platform/yaml/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: acme-fitness-ingress
  namespace: #@ data.values.workloadNamespace
spec:
  virtualhost:
    fqdn: #@ 'acme-fitness.' + data.values.appDomainName
    tls:
      secretName: acme-fitness-cert
  routes:
    - conditions:
        - prefix: /
      services:
        - name: acme-fitness-gateway
          port: 80
